--- a/LinearB/nbproject/project.properties
+++ b/LinearB/nbproject/project.properties
@@ -27,7 +27,7 @@ dist.dir=dist
 dist.jar=${dist.dir}/LinearB.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.sqlite-jdbc-3.23.1.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\ProjetoN2_3.0\\src\\db\\sqlite-jdbc-3.23.1.jar
+file.reference.sqlite-jdbc-3.23.1.jar=src\\db\\sqlite-jdbc-3.23.1.jar
 includes=**
 jar.compress=false
 javac.classpath=\
